corrected trinitron and icy tower

--- a/_posts/2023-01-15-icy-tower.markdown
+++ b/_posts/2023-01-15-icy-tower.markdown
@@ -14,4 +14,4 @@ Instead of it laying on my disk, I was thinking that it could help someone.
 
 Here is a short GIF.
 
-![GIF]({{site.baseurl}}/images/icy-tower-basic/icy-tower-basic.gif)
+![GIF]({{site.baseurl}}images\icy-tower-basic\icy_tower-basic.gif)
