Updated all articles

--- a/_posts/2014-04-30-facebook-f8.markdown
+++ b/_posts/2014-04-30-facebook-f8.markdown
@@ -8,10 +8,11 @@ tags:   [events, videomapping]
 featured: true
 ---
 
-When Facebook had an F8 conference, I was tasked with creating various content for a 60 meter long installation, mounted to the ceiling of lounge area of the venue. 
+When Facebook had an F8 conference, I was tasked with creating various content for a 60 meter long installation, mounted to the ceiling of a lounge area of the venue. 
 It was huge, the photos don't give it justice. We used 8 projectors, with brightness of 40k lumen (home projectors have for example around 2500 lumen). To say the least, no expense was spared, and it was a really interesting project to be part of.
 
 So cool things about it:
+
 - 8x 40k projectors, with 4k resolution. 
 - Laser (optical) video cables from media server to projectors were used, so projector blending wouldn't be disturbed (the projector outputs on the installation are blended together with a gradient, so the projection area can be larger - if the projectors are too apart, HDMI cables cannot be used without repeaters, and they have delay - the blending breaks on large installations, therefore speed of light (optical video cables) needs to be used instead.)
 
@@ -19,7 +20,7 @@ So cool things about it:
 ![stage]({{site.baseurl}}\images\f8\f8-pano-1.jpg)
 
 - The effects were connected to Facebook's API, and RFID chips of the visitors. Meaning, if someone new came, their profile picture was downloaded, and added to the visuals of the installation. The same was with where people were from, type of attendees, etc.
-- The primary media server's actions was copied to a duplicate secondary, in case the primary failed.
+- The primary media server's actions was copied to a duplicate secondary server, in case the primary failed.
 
 ![stage]({{site.baseurl}}\images\f8\f8-photo-2.jpg)
 
