--- a/_posts/2023-01-15-icy-tower.markdown
+++ b/_posts/2023-01-15-icy-tower.markdown
@@ -4,7 +4,7 @@ title:  Icy Tower Basic Clone
 description: A quick practice with C# and Unity.
 date:   2023-01-15 15:01:35 +0300
 image:  '/images/icy-tower-basic/icy-tower-basic-1.png'
-tags:   [game, C#]
+tags:   [gamedev, programming]
 ---
 I wanted to practice a bit of C# in Unity, and I always like Icy Tower flash game when I was a kid. 
 
