--- a/_posts/.2024-03-01-mobile-world-convention.markdown
+++ b/_posts/.2024-03-01-mobile-world-convention.markdown
@@ -5,6 +5,7 @@ description: A school project where we projected some party visuals on a head in
 date:   2014-04-16 15:01:35 +0300
 image:  '/images/head-projection/clayplay_thumb.webp'
 tags:   [concept, events]
+published: true
 ---
 School 24H project where we mapped a sculpture of a head in a park.
 
